# test

./: .dbt-checkpoint.yaml  .envv  .gitignore  .pre-commit-config.yaml  .sqlfluff  .sqlfluffignore  README.md  Time DotCom Data Engineering task.docx  airflow.cfg  makefile  pyproject.toml
.github/workflows/: airflow.yaml  dbt.yaml
dags/: chicago_taxi_trips__taxi_trips.py  common__us_holidays.py
dags/include/: bigquery.py  helpers.py
dags/include/constants/: airflow.py  dbt.py
dbt/: dbt_project.yml  profiles.yml
dbt/macros/: utils.sql
dbt/models/chicago_taxi_trips/: dim_holidays_impact.sql  dim_top_earners.sql  dim_top_workers.sql  dim_worker_shifts.sql  fct_taxi_trips.sql  fct_worker_shifts.sql  schema.yaml
dbt/models/common/: schema.yaml
